--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Andrew Waple's Homepage</h1>
+                <h1 id="homeHeading">Andrew Waple Maps</h1>
                 <hr>
                 <p>The only source for authentic Andrew Waple maps!</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
@@ -107,28 +107,28 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
                         <h3>Python skills</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <!-- <p class="text-muted">Our templates are updated regularly so they don't break.</p> -->
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
                         <h3>Model Builder experience</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <!-- <p class="text-muted">You can use this theme as is, or you can make changes!</p> -->
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
                         <h3>Tall</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                        <!-- <p class="text-muted">We update dependencies to keep things fresh.</p> -->
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
                         <h3>Punctual</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <!-- <p class="text-muted">You have to make your websites with love these days!</p> -->
                     </div>
                 </div>
             </div>
@@ -234,10 +234,10 @@
 
     <aside class="bg-dark">
         <div class="container text-center">
-            <div class="call-to-action">
+            <!-- <div class="call-to-action">
                 <h2>Free Download at Start Bootstrap!</h2>
                 <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
-            </div>
+            </div> -->
         </div>
     </aside>
 
@@ -247,7 +247,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Ready to start your next project with Andrew? That's great! Give him a call or send him an email and he will get back to you as soon as possible!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
