Update 8 - adding text

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                                 <div class="project-name">
                                     Project 1
                                 </div>
+								<p>Above are some examples of Andrew's work.</p>
                             </div>
                         </div>
                     </a>
