Update 9 - more text added

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                 <div class="project-name">
                                     Project 1
                                 </div>
-								<p>Above are some examples of Andrew's work.</p>
+								<p>Here is one example of Andrew's work.</p>
                             </div>
                         </div>
                     </a>
@@ -165,6 +165,7 @@
                                 <div class="project-name">
                                     Project 2
                                 </div>
+								<p>Here is another example of Andrew's work.</p>
                             </div>
                         </div>
                     </a>
