--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title> <font color="red">Creative - Andrew Waple's Mapwork</title>
+    <title>Creative - Andrew Waple's Mapwork</title><font color="red">
 
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Core CSS -->
