--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Andrew Waple's Mapwork</title><font color="red">
+    <title>Creative - Andrew Waple's Mapwork</title>
 
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Core CSS -->
@@ -173,13 +173,14 @@
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/3.jpeg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/3.jpeg" class="img-responsive" alt="">
+						<img src="3.jpeg" style="width:1000px;height:1410px;">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project 3
+                                    QGIS skills
                                 </div>
                             </div>
                         </div>
@@ -194,7 +195,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project 4
+                                    Python skills
                                 </div>
                             </div>
                         </div>
