--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="" style="width:50%;height:50%;">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    <!-- Category -->
                                 </div>
                                 <div class="project-name">
                                     Project 1
@@ -156,11 +156,11 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="" style="width:50%;height:50%;">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    <!-- Category -->
                                 </div>
                                 <div class="project-name">
                                     Project 2
@@ -172,12 +172,11 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/3.jpeg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/3.jpeg" class="img-responsive" alt="">
-							<img src="3.jpeg" style="width:1000px;height:1410px;">
+                        <img src="img/portfolio/thumbnails/3.jpeg" class="img-responsive" alt="" style="width:50%;height:50%;">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    <!-- Category -->
                                 </div>
                                 <div class="project-name">
                                     QGIS skills
@@ -187,12 +186,15 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/4.jpeg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/4.jpeg" class="img-responsive" alt="">
+                    <form method="get" action="Pythonproject1.py">
+					<button type="submit">Download!</button>
+					</form>
+					<a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="" style="width:50%;height:50%;">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    <!-- Category -->
                                 </div>
                                 <div class="project-name">
                                     Python skills
