--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
                                     <!-- Category -->
                                 </div>
                                 <div class="project-name">
-                                    Project 1
+                                    Customizable, sharable Google Maps
                                 </div>
-								<p>Here is one example of Andrew's work.</p>
-                            </div>
+<!-- 								<p>Here is one example of Andrew's work.</p>
+ -->                            </div>
                         </div>
                     </a>
                 </div>
@@ -163,10 +163,10 @@
                                     <!-- Category -->
                                 </div>
                                 <div class="project-name">
-                                    Project 2
+                                    ArcMap ranking project
                                 </div>
-								<p>Here is another example of Andrew's work.</p>
-                            </div>
+<!-- 								<p>Here is another example of Andrew's work.</p>
+ -->                            </div>
                         </div>
                     </a>
                 </div>
@@ -181,6 +181,8 @@
                                 <div class="project-name">
                                     QGIS skills
                                 </div>
+									This map shows a use of drop shadow.
+								</div>
                             </div>
                         </div>
                     </a>
@@ -199,6 +201,8 @@
                                 <div class="project-name">
                                     Python skills
                                 </div>
+									Download this file for an example of scripting
+								</div>
                             </div>
                         </div>
                     </a>
